--- a/style.css
+++ b/style.css
@@ -82,16 +82,20 @@ h2 {
   margin-top: 1rem;
 }
 
-.logos-clientes img, .logos img {
-  height: 60px;
+.logos img {
+  height: 100px;
   object-fit: contain;
-  filter: grayscale(0%);
-  transition: transform 0.3s ease;
+}
+
+.logos-clientes img {
+  height: 80px;
+  object-fit: contain;
 }
 
 .logos-clientes img:hover,
 .logos img:hover {
   transform: scale(1.1);
+  transition: transform 0.3s ease;
 }
 
 /* Formulário */
@@ -188,12 +192,10 @@ button, .catalog-button {
 
 .card-rep img {
   width: 100%;
-  max-height: 120px; /* Altura bem menor */
+  max-height: 120px;
   object-fit: cover;
   border-radius: 8px;
   margin-bottom: 0.8rem;
-}
-
 }
 
 .card-rep h3 {
