--- a/style.css
+++ b/style.css
@@ -195,11 +195,14 @@ button, .catalog-button {
 }
 
 .card-rep img {
-  width: 100%;
-  max-height: 140px;
+  width: 180px;
+  height: 180px;
   object-fit: cover;
-  border-radius: 8px;
+  border-radius: 50%;
   margin-bottom: 0.8rem;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .card-rep h3 {
